--- a/src/app/myexpenses/transaction-list/transaction-list.component.html
+++ b/src/app/myexpenses/transaction-list/transaction-list.component.html
@@ -1,10 +1,11 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
 <div class="panel panel-primary">
     <div class="panel-heading">
       <h2>Transactions List</h2>
       <b><label for="info" style="color: red;">(-)Debit (+)Credit</label></b>
     </div>
     <div class="panel-body">
-      <table class="table table-striped">
+      <table class="card-body table table-striped">
         <thead>
           <tr>
             <!--<th>Id</th>-->
