--- a/src/app/user-details/user-details.component.html
+++ b/src/app/user-details/user-details.component.html
@@ -1,21 +1,22 @@
-<h2>User Details</h2> 
+<h2>User Details</h2>
 
-<hr/>
+<hr />
 <div *ngIf="user">
   <div>
-    <label><b>UserName: </b></label> {{user.username}}
+    <label><b>UserName: </b></label> {{ user.username }}
   </div>
   <div>
-    <label><b>Password: </b></label> {{user.password}}
+    <label><b>Password: </b></label> {{ user.password }}
   </div>
   <div>
-    <label><b>EmailId: </b></label> {{user.email}}
-  </div> 
+    <label><b>EmailId: </b></label> {{ user.email }}
+  </div>
   <div>
-    <label><b>Role: </b></label> {{user.role}}
-  </div>  
+    <label><b>Role: </b></label> {{ user.role }}
+  </div>
 </div>
 
-<br>
-<br>
-<button (click)="list()" class="btn btn-primary">Back to Users List</button><br>
+<br />
+<br />
+<button (click)="list()" class="btn btn-primary">Back to Users List</button
+><br />
