--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,133 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-  <!-- Links -->
+<head>
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
+  <style>
+    @media all and (min-width: 992px) {
+      .navbar .nav-item .dropdown-menu {
+        display: none;
+      }
+      .navbar .nav-item:hover .nav-link {
+      }
+      .navbar .nav-item:hover .dropdown-menu {
+        display: block;
+      }
+      .navbar .nav-item .dropdown-menu {
+        margin-top: 0;
+      }
+    }
+  </style>
+</head>
+<!-- ============= COMPONENT ============== -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid">
+    <a
+      class="navbar-brand"
+      href="#"
+      routerLinkActive="active"
+      routerLink="transactions"
+      ><img src="favicon.ico" alt="Logo" />&nbsp; Home Network</a
+    >
+
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mr-auto">
+        <!--<li class="nav-item active"> <a class="nav-link" href="#">Home</a> </li>
+     <li class="nav-item"><a class="nav-link" href="#"> About </a></li>
+     <li class="nav-item"><a class="nav-link" href="#"> Services </a></li>-->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
+            Users</a
+          >
+          <ul class="dropdown-menu">
+            <li>
+              <a
+                class="dropdown-item"
+                routerLinkActive="active"
+                routerLink="users"
+                >Users List</a
+              >
+            </li>
+            <li>
+              <a
+                class="dropdown-item"
+                routerLinkActive="active"
+                routerLink="add"
+                >Add User</a
+              >
+            </li>
+            <!--<li><a class="dropdown-item" href="#"> Submenu item 3 </a></li>-->
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"
+            >Transactions</a
+          >
+          <ul class="dropdown-menu">
+            <li>
+              <a
+                class="dropdown-item"
+                routerLinkActive="active"
+                routerLink="transactions"
+                >List</a
+              >
+            </li>
+            <li>
+              <a
+                class="dropdown-item"
+                routerLinkActive="active"
+                routerLink="createtransaction"
+                >Create</a
+              >
+            </li>
+            <li>
+              <a
+                class="dropdown-item"
+                routerLinkActive="active"
+                routerLink="filterbydates"
+                >Filter</a
+              >
+            </li>
+            <!--<li><a class="dropdown-item" href="#"> Submenu item 3 </a></li>-->
+          </ul>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto">
+        <!--<li class="nav-item"><a class="nav-link" href="#"> Menu item </a></li>
+     <li class="nav-item"><a class="nav-link" href="#"> Menu item </a></li>
+     <li class="nav-item dropdown">
+       <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown"> Dropdown right </a>
+         <ul class="dropdown-menu dropdown-menu-end">
+         <li><a class="dropdown-item" href="#"> Submenu item 1</a></li>
+         <li><a class="dropdown-item" href="#"> Submenu item 2 </a></li>
+         </ul>
+     </li>-->
+        <li class="nav-item">
+          <a class="nav-link" (click)="OnLogout()">Logout</a>
+        </li>
+      </ul>
+    </div>
+    <!-- navbar-collapse.// -->
+  </div>
+  <!-- container-fluid.// -->
+</nav>
+
+<!-- ============= COMPONENT END// ============== -->
+
+<!--Existing Links -->
+<!-- <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+ 
   <ul class="navbar-nav">
     <li class="nav-item">
         <a routerLink="users" class="nav-link" routerLinkActive="active">User List</a>
@@ -20,23 +145,20 @@
   <a routerLink="filterbydates" class="nav-link" routerLinkActive="active">Transaction Filter</a>
 </li>
   </ul>
-</nav>
+</nav> -->
 <div class="container">
-  <br>
-  <h2 style="text-align: center;">{{title}}</h2>
-  <hr>  
+  <br />
+  <h2 style="text-align: left">{{ title }}</h2>
+  <hr />
   <div class="card">
     <div class="card-body">
-  <router-outlet></router-outlet>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
 
 <footer class="footer">
-  <div class="container" style="text-align: center;">
-      <span>&COPY; All Rights Reserved 2023</span>
+  <div class="container" style="text-align: center">
+    <span>&COPY; All Rights Reserved 2023</span>
   </div>
 </footer>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
