--- a/src/app/create-user/create-user.component.html
+++ b/src/app/create-user/create-user.component.html
@@ -1,30 +1,57 @@
 <h3>Create User</h3>
-<div [hidden]="submitted" style="width: 400px;">
+<div [hidden]="submitted" style="width: 400px">
   <form ngNativeValidate #form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name">Username</label>
-      <input type="text" class="form-control" id="username" required [(ngModel)]="user.username" name="username">
+      <input
+        type="text"
+        class="form-control"
+        id="username"
+        required
+        [(ngModel)]="user.username"
+        name="username"
+      />
     </div>
 
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="text" class="form-control" id="password" required [(ngModel)]="user.password" name="password">
+      <input
+        type="text"
+        class="form-control"
+        id="password"
+        required
+        [(ngModel)]="user.password"
+        name="password"
+      />
     </div>
 
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="text" class="form-control" id="emailId" required [(ngModel)]="user.email" name="emailId">
+      <input
+        type="text"
+        class="form-control"
+        id="emailId"
+        required
+        [(ngModel)]="user.email"
+        name="emailId"
+      />
     </div>
 
     <div class="form-group">
-        <label for="role">Select Role:</label>
-        <select class="form-control" id="role" required [(ngModel)]="user.role" name="role">
-          <option>Admin</option>
-          <option>Manager</option>
-          <option>User</option>
-        </select>
+      <label for="role">Select Role:</label>
+      <select
+        class="form-control"
+        id="role"
+        required
+        [(ngModel)]="user.role"
+        name="role"
+      >
+        <option>Admin</option>
+        <option>Manager</option>
+        <option>User</option>
+      </select>
     </div>
-    
+
     <button type="submit" class="btn btn-success">Submit</button>
   </form>
 </div>
