--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <h3>User Login</h3>
-<div style="width: 400px;">
+<div class="card-body login-form">
   <form  ngNativeValidate #form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name">Username</label>
@@ -8,7 +8,7 @@
 
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="text" class="form-control" id="password"  [(ngModel)]="password" name="password" required>
+      <input type="password" class="form-control" id="password"  [(ngModel)]="password" name="password" required>
     </div>
 
     <!--<div class="form-group">
