--- a/src/app/update-user/update-user.component.html
+++ b/src/app/update-user/update-user.component.html
@@ -1,19 +1,40 @@
 <h3>Update User</h3>
-<div style="width: 400px;">
+<div style="width: 400px">
   <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name">username</label>
-      <input type="text" class="form-control" id="username" required [(ngModel)]="user.username" name="username">
+      <input
+        type="text"
+        class="form-control"
+        id="username"
+        required
+        [(ngModel)]="user.username"
+        name="username"
+      />
     </div>
 
     <div class="form-group">
       <label for="name">password</label>
-      <input type="text" class="form-control" id="password" required [(ngModel)]="user.password" name="password">
+      <input
+        type="text"
+        class="form-control"
+        id="password"
+        required
+        [(ngModel)]="user.password"
+        name="password"
+      />
     </div>
 
     <div class="form-group">
       <label for="name">email</label>
-      <input type="text" class="form-control" id="email" required [(ngModel)]="user.email" name="email">
+      <input
+        type="text"
+        class="form-control"
+        id="email"
+        required
+        [(ngModel)]="user.email"
+        name="email"
+      />
     </div>
 
     <!--<div class="form-group">
@@ -23,7 +44,13 @@
 
     <div class="form-group">
       <label for="role">Select Role:</label>
-      <select class="form-control" id="role" required [(ngModel)]="user.role" name="role">
+      <select
+        class="form-control"
+        id="role"
+        required
+        [(ngModel)]="user.role"
+        name="role"
+      >
         <option>Admin</option>
         <option>Manager</option>
         <option>User</option>
