--- a/src/app/update-user/update-user.component.html
+++ b/src/app/update-user/update-user.component.html
@@ -42,7 +42,7 @@
       <input type="text" class="form-control" id="role" required [(ngModel)]="user.role" name="role">
     </div> -->
 
-    <div class="form-group">
+    <div class="form-group" *ngIf="role==='Admin' ">
       <label for="role">Select Role:</label>
       <select
         class="form-control"
